<?xml version="1.0" encoding="utf-8" ?>
<!DOCTYPE resources[
    <!ENTITY password "Mật khẩu">
    <!ENTITY email "Email">
    ]>

<resources>
    <string name="app_name">Lesson206</string>
    <string name="greeting_message">Xin chào Branium Academy</string>
    <string name="thank_you">Cảm ơn bạn vì đã giúp đỡ</string>
    <string name="text_view">TextView</string>
    <string name="hint_name">Ví dụ: Nguyễn Văn A</string>
    <string name="hint_address">Ví dụ: Hà Nội</string>
    <string name="text_full_name">Họ và tên:</string>
    <string name="text_address">Địa chỉ:</string>
    <string name="title_learn_edittext">Học Sử Dụng Edit Text</string>
    <string name="btn_text_register">Đăng ký</string>
    <string name="btn_text_login">Đăng nhập</string>
    <string name="hint_email">nguyennam@xmail.com</string>
    <string name="hint_password">&password; tối thiểu 8 kí tự A-Za-z0-9~!@#</string>
    <string name="text_password">&password;:</string>
    <string name="text_email">&email;:</string>
    <string name="title_login">Đăng nhập</string>
</resources>